    it will still need EditBus.jar to operate.
- New methods in TextUtilities class:
  findWordStart(String line, int pos, String noWordSep)
  findWordEnd(String line, int pos, String noWordSep)
- The painting of invalid lines can now be toggled in File->Global
  Options->Editor
- Expand Abbreviation now supports multiple matches (Valery Kondakoff)
- doc/NEWS.txt file written :-)

+ Enhancements

- The wait cursor is now displayed in the HyperSearch dialog box while
  searching
- 'New View' button added to tool bar
- Fixed several files to compile with the jikes 'pedantic' option (+P)
- API documentation updated

+ Bug Fixes

- The smart home/end toggle was broken (since 2.2pre4)
- Fixed obscure bug with session saving and new files (since 2.2pre1)
- DIRTY_CHANGED events are no longer fired at nearly every autosave (since
  1.7pre2???)
- Removed debugging message ('hi') from GUIUtilities class (since 2.2pre5)
- GUIUtilities.java didn't compile with the JDK 1.3 javac (since 2.2pre5)
- The source parameter to the log() method was ignored when logging exceptions
  (since 2.2pre2)
- HyperSearch didn't deal with closed buffers correctly (since 1.7pre2???)

+ API Changes

- Plugins that rely on the old event system will no longer work

* Version 2.2pre5

+ Enhancements

- Workaround for broken window geometry code on Linux
- Documentation updates
- New flag can be passed to HistoryTextField constructor; if true, selecting
  something from the popup list will immediately fire an ActionEvent
- Macro shortcut prefix is now C+e C+m again (used to be C+e m)
- 'Block comment' now always inserts comments at the start of the line
- New plugin template.jmk (Mike Dillon)

+ Bug Fixes

- Shift+END didn't work properly (since 2.2pre4)
- The Macros menu wasn't updated when a macro was added/removed (since 2.2pre4)
- jedit.manifest file was not installed with the rest of the source code (since
  2.1pre3)
- Edit modes installed by plugins did not get a chance at automatically being